--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body{
     font-family: sans-serif;
 }
+
 .flex{
     display: flex;
 }
@@ -37,12 +38,16 @@ body{
     flex-wrap: wrap;
 }
 .wellcome_content{
+    background-image: url("../assets/images/bg-wellcome.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0px 0px 0px 0px;
     padding-top: 100px;
     margin-top: 50px;
     border-radius: 80px 20px 80px 20px;
     height: 280px;
     width: 90%;
-    background-color: purple;
+    background-color: #0C1014;
 }
 
 .wellcome h1{
@@ -65,7 +70,7 @@ body{
     margin: 0px 10px;
     padding-top: 2.5px;
     text-align: center;
-    color: purple;
+    color: #0C1014;
     height: 30px;
     font-weight: bold;
     width: auto;
@@ -73,7 +78,7 @@ body{
     border: solid;
     border-radius: 5px;
     border-width: 3px;
-    border-color: purple;
+    border-color: #0C1014;
 
 }
 .content .filter a{
@@ -83,14 +88,19 @@ body{
 .content .filter .filter_box:hover{
     padding-top: 2.5;
     color: white;
-    background-color: purple;
-    border-color: purple;
+    background-color: #0C1014;
+    border-color: #0C1014;
+    transition: color 0.45s ease-in-out, background-color 0.45s ease-in-out;
 
 }
 .content_product{
     height: 1000px;
     width: 100%;
     margin: 50px 0px;
+}
+.content_product a{
+    text-decoration: none;
+    color: #0C1014;
 }
 .content_product_card{
     margin: 10px 20px;
@@ -99,7 +109,17 @@ body{
     width: 300px;
     border: solid ;
     border-width: 3px;
-    border-color: purple;
+    border-color: #0C1014;
+    transition: transform .5s;
+}
+.img_product{
+    margin-left: 20px;
+    margin-bottom:30px;
+    width: 250px;
+    height: 200px;
+}
+.content_product_card:hover{
+    transform: scale(1.05);
 }
 
 .img_product img{
@@ -107,8 +127,8 @@ body{
     border-radius: 30px 10px 30px 10px;
     width: 100%;
     height: 100%;
-    width: 250px;
-    height: 200px;
+    object-fit: cover;
+
 }
 .title_content{
     margin-top: 10px;
@@ -127,4 +147,78 @@ body{
 .title_content .harga{
     margin-top: 5px;
     font-weight: bolder;
+}
+
+.img_col{
+    margin-left: 200px;
+    margin-top: 80px;
+    width: 80px;
+}
+
+.img_dp_col{
+    margin: 10px 0px;
+    height: 80px;
+    width: 100%;
+}
+.img_dp_col img{
+    width: 80px;
+    object-fit: cover;
+}
+.img_product{
+    padding-left: 80px;
+    width: 500px;
+    height: 500px;
+}
+
+
+.content_detail_product{
+    padding-left: 50px;
+    margin-top: 100px;
+}
+.content_detail_product h1{
+    margin-top: 10px;
+    letter-spacing: 1.5px;
+}
+.content_detail_product h2{
+    margin-top: 10px;
+}
+.container_dp{
+    margin-top: 30px;
+}
+.desc_dp{
+    margin-top: 20px;
+    width: 300px;
+    overflow-wrap: break-word;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    height: 90px;
+    max-width: 700px;
+    max-height: 90px;
+}
+.btn_rent button{
+    color: white;
+    font-weight: bold;
+    margin-top: 70px;
+    margin-bottom: 10px;
+    width: 450px;
+    height: 35px;
+    border-radius: 10px;
+    background-color: #0C1014;
+    transition: background-color 0.3s ease-in-out;
+}
+.btn_rent button:hover{
+    background-color: white;
+}
+.btn_buy button{
+    color: black;
+    font-weight: bold;
+
+    width: 450px;
+    height: 35px;
+    border-radius: 10px;
+    background-color: white;
+    transition: background-color 0.3s ease-in-out;
+}
+.btn_buy button:hover{
+    background-color: white;
 }
