--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,8 @@ i {
 } */
 /* NAV END */
 
+
+
 .flex-wrap{
     flex-wrap: wrap;
 }
@@ -333,12 +335,15 @@ i {
     width: 80px;
     object-fit: cover;
 }
-.img_product{
+.img_product_dp{
     padding-left: 80px;
     width: 500px;
     height: 500px;
 }
-
+.img_product_dp img{
+    width: 100%;
+    height: 100%;
+}
 
 .content_detail_product{
     padding-left: 50px;
